2010-01-04  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Remove raw_input from queues in favor of user.prompt
        https://bugs.webkit.org/show_bug.cgi?id=33140

        This lets up properly mock out the user interaction instead of hacking
        around it with the options.

        * Scripts/webkitpy/commands/queues.py:
        * Scripts/webkitpy/commands/queuestest.py:

2010-01-04  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool should not require users to install mechanize
        https://bugs.webkit.org/show_bug.cgi?id=32635

        Use the nifty "autoinstall" module from Daniel Krech:
        http://pypi.python.org/pypi/autoinstall/0.2
        http://code.google.com/p/pyautoinstall/
        It's available under a WebKit-compatible BSD license.

        * Scripts/webkitpy/__init__.py:
         - bind "mechanize" to an autoinstall importer which will
           auto-download mechanize if necessary.
        * Scripts/webkitpy/autoinstall.py: Added.
        * Scripts/webkitpy/bugzilla.py: use "mechanize" instead of webkit_mechanize
        * Scripts/webkitpy/statusbot.py: ditto.
        * Scripts/webkitpy/webkit_mechanize.py: Removed.

2010-01-04  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Move AbstractSequencedCommand to a more general location
        https://bugs.webkit.org/show_bug.cgi?id=33137

        I do what the FIXME tell me to do.

        * Scripts/webkitpy/commands/abstractsequencedcommand.py: Added.
        * Scripts/webkitpy/commands/download.py:
        * Scripts/webkitpy/commands/upload.py:

2010-01-04  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Rename StatusBot to StatusServer
        https://bugs.webkit.org/show_bug.cgi?id=33139

        It's not a bot.  It's a server.

        * Scripts/bugzilla-tool:
        * Scripts/webkitpy/bugzilla.py:
        * Scripts/webkitpy/commands/early_warning_system.py: